arrumando página serviços

--- a/src/servicos.html
+++ b/src/servicos.html
@@ -93,7 +93,7 @@
             <h3 id="eba"><b>Cotação de Fretes</b></h3>
             <p>Preencha o formulário a seguir para fazer uma simulação de sua cotação de transporte. </p>
         </div>
-        <button id="read_button" type="button" class="btn btn-danger"><a id="cardswhite" href="formularioServiços.html" target="_blank"> Solicitar cotação</a></button>
+        <button id="read_button" type="button" class="btn btn-danger"><a id="cardswhite" href="formularioServicos.html" target="_blank"> Solicitar cotação</a></button>
     </div>
     </div>
 
@@ -107,7 +107,7 @@
             <h3 id="eba"><b> Coletas de mercadorias</b></h3>
             <p>O processo envolve a coleta dos produtos de todos os clientes, o transporte seguro e rápido dos pacotes e a entrega no prazo estabelecido.</p>
         </div>
-        <button id="read_button" type="button" class="btn btn-danger"><a id="cardswhite" href="formularioServiços.html" target="_blank">Saiba mais</a></button>
+        <button id="read_button" type="button" class="btn btn-danger"><a id="cardswhite" href="formularioServicos.html" target="_blank">Saiba mais</a></button>
     </div>
     </div>
 
@@ -121,7 +121,7 @@
             <h3 id="eba"><b> Transporte de cargas fracionadas</b></h3>
             <p>  É um tipo de serviço no qual o embarcador paga somente pelo espaço no caminhão utilizado pela sua remessa.  </p>
         </div>
-        <button id="read_button" type="button" class="btn btn-danger"><a id="cardswhite" href="formularioServiços.html" target="_blank"> Saiba mais</a></button>
+        <button id="read_button" type="button" class="btn btn-danger"><a id="cardswhite" href="formularioServicos.html" target="_blank"> Saiba mais</a></button>
     </div>
     </div>
 
@@ -135,7 +135,7 @@
             <h3 id="eba"><b> Transporte de cargas fechadas</b></h3>
             <p>Esse tipo de serviço é ideal para entregas e remessas que irão percorrer grandes distâncias e que precisam de mais cuidados com a carga do que com o volume em si.</p>
         </div>
-        <button id="read_button" type="button" class="btn btn-danger"><a id="cardswhite" href="formularioServiços.html" target="_blank">Saiba mais</a></button>
+        <button id="read_button" type="button" class="btn btn-danger"><a id="cardswhite" href="formularioServicos.html" target="_blank">Saiba mais</a></button>
     </div>
     </div>
 
