--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
         <div class="container-fluid">
             <!--HOME, SOBRE NÓS-->
             <div class="col-auto pt-3 ">
-                <div id="carouselExampleDark" class="carousel carousel-dark slide">
+                <div id="carouselExampleDark" class="carousel carousel-dark slide carousel-16-9">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
                             aria-current="true" aria-label="Slide 1"></button>
