--- a/src/cidadesatendidas.html
+++ b/src/cidadesatendidas.html
@@ -65,6 +65,7 @@
     </header>
         <!--CONTEUDO-->
         <main>
+        <figure class="text-center">
         <h2>CIDADES ATENDIDAS</h2>
         <div class="container my-3">
             <div class="row">
