--- a/src/cidadesatendidas.html
+++ b/src/cidadesatendidas.html
@@ -66,7 +66,7 @@
         <!--CONTEUDO-->
         <main>
         <figure class="text-center">
-        <h2>CIDADES ATENDIDAS</h2>
+        <h2 class="mt-3">CIDADES ATENDIDAS</h2>
         <div class="container my-3">
             <div class="row">
               <div class="col">
