--- a/src/formularioServicos.html
+++ b/src/formularioServicos.html
@@ -11,7 +11,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
   crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/src/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>FORMULARIO DE SERVIÇOS</title>
 </head>
 
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg">
           <nav class="navbar fixed-top" style="background-color: #b22222;">
             <div class="container-fluid">
-              <a class="navbar-brand me-5" href="#"><img id="" src="assets/imagens/logo.png" alt=""></a>
+              <a class="navbar-brand me-5" href="#"><img id="" src="" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -81,7 +81,7 @@
         <div class="container-formulario">
          <div id="formulario_servicos">
             <div class="form-image1">
-                <img src="/src/img/imagens serviços e form serviços/undraw_interview_re_e5jn (1).svg">
+                <img src="img/undraw_interview_re_e5jn (1).svg">
             </div>
             <form action="#"> <!--precisa do back end-->
                 <div id="eba" class="input-group">
