--- a/src/servicos.html
+++ b/src/servicos.html
@@ -12,7 +12,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
   crossorigin="anonymous"></script>
-<link rel="stylesheet" href="/src/style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 
 
@@ -87,7 +87,7 @@
    <div class="col-md-3">
     <div class="cards">
         <div class="icon">
-            <img src="/src/img/cotacao.png" alt="">
+            <img src="img/cotacao.png" alt="">
         </div>
         <div class="conteudo">
             <h3 id="eba"><b>Cotação de Fretes</b></h3>
@@ -101,7 +101,7 @@
     <div class="col-md-3">
     <div class="cards">
         <div class="icon">
-            <img src="/src/img/imagens serviços e form serviços/scaniaVermelho.jpg" alt="">
+            <img src="img/scaniaVermelho.jpg" alt="">
         </div>
         <div class="conteudo">
             <h3 id="eba"><b> Coletas de mercadorias</b></h3>
@@ -115,7 +115,7 @@
     <div class="col-md-3">
     <div class="cards">
         <div class="icon">
-            <img src="/src/img/imagens serviços e form serviços/LOGISTICA.svg" alt="">
+            <img src="img/LOGISTICA.svg" alt="">
         </div>
         <div class="conteudo">
             <h3 id="eba"><b> Transporte de cargas fracionadas</b></h3>
@@ -129,7 +129,7 @@
     <div class="col-md-3">
     <div class="cards">
         <div class="icon">
-            <img src="/src/img/imagens serviços e form serviços/caminhaoCinzaCargaFechada.jpg" alt="">
+            <img src="img/caminhaoCinzaCargaFechada.jpg" alt="">
         </div>
         <div class="conteudo">
             <h3 id="eba"><b> Transporte de cargas fechadas</b></h3>
@@ -143,7 +143,7 @@
     <div class="col-md-3">
         <div class="cards">
             <div class="icon">
-                <img src="/src/img/imagens serviços e form serviços/PHOTO-2022-08-03-11-55-27.jpg" alt="">
+                <img src="img/PHOTO-2022-08-03-11-55-27.jpg" alt="">
             </div>
             <div class="conteudo">
                 <h3 id="eba"><b> Armazenamento de cargas</b></h3>
@@ -157,7 +157,7 @@
     <div class="col-md-3">
     <div class="cards">
         <div class="icon">
-            <img src="/src/img/imagens serviços e form serviços/expedição.jpg" alt="">
+            <img src="img/expedição.jpg" alt="">
         </div>
         <div class="conteudo">
             <h3 id="eba"><b> Inspeção, expedição e distribuição</b></h3>
