--- a/src/servicos.html
+++ b/src/servicos.html
@@ -19,64 +19,50 @@
 <body>
   <!--CABEÇALHO-->
   <header>
-    <nav class="navbar navbar-expand-lg">
-      <nav class="navbar fixed-top" style="background-color: #b22222;">
-        <div class="container-fluid">
-          <a class="navbar-brand me-5" href="#"><img id="" src="assets/imagens/logo.png" alt=""></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <nav class="navbar navbar-expand-xxl">
+        <nav class="navbar fixed-top" style="background-color: #b22222;">
+            <div class="container-fluid">
+                <a class="navbar-brand me-5" href="#"><img id="" src="img/zucco-removebg-preview.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-            <ul class="navbar-nav me-auto  mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Sobre nós</a>
-              </li>
+                    <ul class="navbar-nav me-auto  mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="sobrenos.html">Sobre nós</a>
+                        </li>
 
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                  aria-expanded="false">
-                  Serviços
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Cotação de Fretes</a></li>
-                  <li><a class="dropdown-item" href="#">Coletas de Mercadorias</a></li>
-                  <li><a class="dropdown-item" href="#">Transporte de Cargas Fracionadas</a></li>
-                  <li><a class="dropdown-item" href="#">Transporte de Cargas Fechadas</a></li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item" href="#">Recebimento e Armazenagem de Carga</a></li>
-                  <li><a class="dropdown-item" href="#">Inspeção, Expedição e Distribuição</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Onde Estamos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Trabalhe conosco</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Cidades atendidas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link me-5" href="#">Contato</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
-              <button class="btn btn-light" type="submit">Pesquisar</button>
-            </form>
-          </div>
-        </div>
-      </nav>
+                        <li class="nav-item">
+                            <a class="nav-link" href="servicos.html">servicos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="ondeestamos.html">Onde Estamos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="trabalheconosco.html">Trabalhe conosco</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="cidadesatendidas.html">Cidades atendidas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link me-5" href="contato.html">Contato</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
+                        <button class="btn btn-light" type="submit">Pesquisar</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
     </nav>
-  </header>
+</header>
     <figure class="text-center">
       
     <!--SERVIÇOS-->
