--- a/src/servicos.html
+++ b/src/servicos.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zucco Transportes</title>
-  <link rel="icon" href=""> 
+  <link rel="icon" href="img/logos/favicon_io/favicon-16x16.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-xxl">
         <nav class="navbar fixed-top" style="background-color: #b22222;">
             <div class="container-fluid">
-                <a class="navbar-brand me-5" href="#"><img id="" src="img/zucco-removebg-preview.png" alt=""></a>
+                <a class="navbar-brand me-5" href="index.html"><img id="" src="img/zucco-removebg-preview.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
