--- a/src/cidadesatendidas.html
+++ b/src/cidadesatendidas.html
@@ -65,8 +65,9 @@
     </header>
         <!--CONTEUDO-->
         <main>
-        <figure class="text-center">
-        <h2 class="mt-3">CIDADES ATENDIDAS</h2>
+        <figure class="text-center mt-5">
+        <h2>CIDADES ATENDIDAS</h2>
+        </figure>
         <div class="container my-3">
             <div class="row">
               <div class="col">
