implementação de 'email' tela Trabalhe Conosco

--- a/src/trabalheconosco.html
+++ b/src/trabalheconosco.html
@@ -97,6 +97,10 @@
                         <label class="form-check-label" for="exampleRadios2">
                           Motorista
                         </label>
+                        <div class="mt-5 mb-4">
+                            <label for="exampleFormControlInput1" class="form-label1"><h5>Email para contato:</h5></label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Digite seu e-mail">
+                          </div>
                       </div>
                       <h5 class="centered-1">Qual seu diferencial?</h5>
                       <div class="mb-3"> 
