--- a/src/ondeestamos.html
+++ b/src/ondeestamos.html
@@ -50,7 +50,10 @@
                                 <a class="nav-link" href="cidadesatendidas.html">Cidades atendidas</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link me-5" href="contato.html">Contato</a>
+                                <a class="nav-link" href="contato.html">Contato</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link me-5" href="cadastro.html">Cadastro</a>
                             </li>
                         </ul>
                         <form class="d-flex" role="search">
