--- a/src/sobrenos.html
+++ b/src/sobrenos.html
@@ -51,8 +51,11 @@
                             <a class="nav-link" href="cidadesatendidas.html">Cidades atendidas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link me-5" href="contato.html">Contato</a>
+                            <a class="nav-link" href="contato.html">Contato</a>
                         </li>
+                        <li class="nav-item">
+                          <a class="nav-link me-5" href="cadastro.html">Cadastro</a>
+                      </li>
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
