--- a/src/trabalheconosco.html
+++ b/src/trabalheconosco.html
@@ -105,6 +105,10 @@
                             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Digite seu e-mail">
                           </div>
                       </div>
+                      <div>
+                        <label for="formFileLg" class="form-label"><h5>Envie seu currículo</h5></label>
+                        <input class="form-control form-control-lg mb-3" id="formFileLg" type="file">
+                      </div>
                       <h5 class="centered-1">Qual seu diferencial?</h5>
                       <div class="mb-3"> 
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
