adicionando captcha na trabalhe conosco, criação da script.js e adição do link de javascrpt em cada pagina

--- a/src/cidadesatendidas.html
+++ b/src/cidadesatendidas.html
@@ -272,7 +272,6 @@
             <p style="color: #ffffff;">© 2009-2023 Zucco</p>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
-
-
 </html>
