--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -217,5 +217,6 @@
             <p style="color: #ffffff;">© 2009-2023 Zucco</p>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
