--- a/src/index.html
+++ b/src/index.html
@@ -346,7 +346,6 @@
             <p style="color: #ffffff;">© 2009-2023 Zucco</p>
         </div>
     </footer>
-
+<script src="script.js"></script>
 </body>
-
 </html>
