--- a/src/index.html
+++ b/src/index.html
@@ -167,8 +167,8 @@
             <!--NOSSOS SERVIÇOS-->
             <h2 class="text-center">Serviços</h2>
             <div class="container mb-5">
-                <div class="row row-cols-1 row-cols-md-4 g-2">
-                    <div class="col">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3 col-xxl-3 mb-md-2 mb-sm-2">
                         <div class="card text-center h-100">
                             <img src="img\cotacao.png" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -181,7 +181,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3 col-xxl-3 mb-md-2 mb-sm-2">
                         <div class="card text-center h-100">
                             <img src="img/coletas_de_mercadorias.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -195,7 +195,7 @@
                         </div>
                     </div>
 
-                    <div class="col">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3 col-xxl-3 mb-md-2 mb-sm-2">
                         <div class="card text-center h-100">
                             <img src="img/carga_fechada.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -210,7 +210,7 @@
                         </div>
                     </div>
 
-                    <div class="col">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3 col-xxl-3 mb-md-2 mb-sm-2">
                         <div class="card text-center h-100">
                             <img src="img/maisinfo.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
