--- a/src/index.html
+++ b/src/index.html
@@ -22,15 +22,16 @@
     <header>
         <nav class="navbar navbar-expand-xxl">
             <nav class="navbar fixed-top" style="background-color: #b22222;">
-                <div class="container-fluid">
-                    <a class="navbar-brand me-5" href="index.html"><img id="" src="img/zucco-removebg-preview.png" alt=""></a>
+                <div class="container-fluid ">
+                    <a class="navbar-brand me-5" href="index.html"><img id="" src="img/zucco-removebg-preview.png"
+                            alt="logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto  mb-lg-0">
+                    <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="index.html">Home</a>
                             </li>
@@ -57,16 +58,17 @@
                                 <a class="nav-link me-5" href="cadastro.html">Cadastro</a>
                             </li>
                         </ul>
-
+                        <img id="solApagado" src="img/icones/brightness-low.svg" alt="" width="30px" height="30px">
+                        <img id="sol" src="img/icones/brightness-low-fill.svg" alt="" width="30px" height="30px">
                     </div>
                 </div>
             </nav>
         </nav>
     </header>
-    <main>
+    <main id="principal">
         <div class="container-fluid">
             <!--HOME, SOBRE NÓS-->
-            <div class="col-auto pt-3 ">
+            <div class="col-auto pt-3">
                 <div id="carouselExampleDark" class="carousel carousel-dark slide carousel-16-9">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
@@ -169,11 +171,13 @@
                             <img src="img\cotacao.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Cotação de Fretes</h5>
-                                <p class="card-text">Preencha o formulário a seguir para fazer uma simulação de sua cotação de transporte.</p>
+                                <p class="card-text">Preencha o formulário a seguir para fazer uma simulação de sua
+                                    cotação de transporte.</p>
                                 <p class="card-text"> Economize tempo e custos, solicite sua cotação!</p>
                             </div>
                             <div class="card-footer">
-                                <button type="button" class="btn btn-danger"><a id="cardswhite" href="formularioServicos.html" target="_blank">Solicitar cotação</a></button>
+                                <button type="button" class="btn btn-danger"><a id="cardswhite"
+                                        href="formularioServicos.html" target="_blank">Solicitar cotação</a></button>
                             </div>
                         </div>
                     </div>
@@ -182,11 +186,13 @@
                             <img src="img/coletas_de_mercadorias.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Coleta de Mercadorias</h5>
-                                <p class="card-text">O processo envolve a coleta dos produtos de todos os clientes, o transporte seguro e rápido dos pacotes e a entrega no prazo estabelecido.</p>
-                                
+                                <p class="card-text">O processo envolve a coleta dos produtos de todos os clientes, o
+                                    transporte seguro e rápido dos pacotes e a entrega no prazo estabelecido.</p>
+
                             </div>
                             <div class="card-footer">
-                                <button type="button" class="btn btn-danger"><a id="cardswhite" href="formularioServicos.html" target="_blank">Saiba mais</a></button>
+                                <button type="button" class="btn btn-danger"><a id="cardswhite"
+                                        href="formularioServicos.html" target="_blank">Saiba mais</a></button>
                             </div>
                         </div>
                     </div>
@@ -196,12 +202,15 @@
                             <img src="img/carga_fechada.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Transportes de Cargas</h5>
-                                <p class="card-text">Distribuição de cargas fechadas ou fracionadas exige estudos específicos da logística em todas as etapas da viagem.</p>
-                                <p class="card-text"> Um parceiro experiente faz toda diferença no seu planejamento logístico! </p>
-                                
+                                <p class="card-text">Distribuição de cargas fechadas ou fracionadas exige estudos
+                                    específicos da logística em todas as etapas da viagem.</p>
+                                <p class="card-text"> Um parceiro experiente faz toda diferença no seu planejamento
+                                    logístico! </p>
+
                             </div>
                             <div class="card-footer">
-                                <button type="button" class="btn btn-danger"><a id="cardswhite" href="formularioServicos.html" target="_blank">Saiba mais</a></button>
+                                <button type="button" class="btn btn-danger"><a id="cardswhite"
+                                        href="formularioServicos.html" target="_blank">Saiba mais</a></button>
                             </div>
                         </div>
                     </div>
@@ -210,13 +219,14 @@
                         <div class="card text-center h-100">
                             <img src="img/maisinfo.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title mt-5">Clique aqui para mais informações sobre serviços oferecidos</h5>
+                                <h5 class="card-title mt-5">Clique aqui para mais informações sobre serviços oferecidos
+                                </h5>
                                 <br>
                             </div>
                             <div class="card-footer">
-                                <button type="button" class="btn btn-danger"><a id="cardswhite" href="servicos.html" target="_blank">Saiba mais</a></button>
+                                <button type="button" class="btn btn-danger"><a id="cardswhite" href="servicos.html"
+                                        target="_blank">Saiba mais</a></button>
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -224,13 +234,10 @@
         </div>
         </div>
     </main>
-
-
     <!--RODAPÉ-->
-    <footer>
-        <div class="container-fluid bg-light pt-3 pb-4 mt-3">
+    <footer id="footer">
+        <div class="container-fluid bg-light pt-3 pb-4">
             <div class="row">
-
                 <div class="col-12 col-sm-12 col-md-2 col-lg-2 col-xl-2 col-xxl-2 mb-3 offset-md-1 mb-3">
                     <p><b>Links Rápidos</b></p>
                     <p><a href="#">Help</a></p>
@@ -313,9 +320,8 @@
                         <b>0800 1111 22</b>
                     </p>
                 </div>
-
                 <!-- <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">-->
-                <div class="col-12 col-md-2  mb-3">
+                <div class="col-12 col-md-2">
                     <div class="card mb-3 mb-3">
                         <div class="card-body mx-auto">
                             <h5 class="card-title fs-6"><b>Sugestões e Reclamações</b></h5>
@@ -342,6 +348,7 @@
             <p style="color: #ffffff;">© 2009-2023 Zucco</p>
         </div>
     </footer>
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
