add gerenciadora a pagina home

--- a/src/index.html
+++ b/src/index.html
@@ -162,6 +162,22 @@
                 </div>
             </div>
 
+            <!--GERENCIAMENTO DE RISCOS-->
+            <div class="container-buonny">
+                <div class="row" id="gerenciadora">
+                    <div class="col-12 col-md-7 center-content">
+                        <h2 class="mt-5 text-center">Gerenciamento de Riscos </h2>
+
+                            <p>Possuímos parceria com a gerenciadora de riscos Buonny, para garantir a procedência de motoristas contratados. Com o gerenciamento de risco no transporte de cargas é oferecido soluções como forma de minimizar prejuízos, ameaças e danos que possam afetar as operações logísticas e não proporcionar uma entrega de qualidade para o cliente.</p>
+                    </div>
+                    <div id="gerenciadora">
+                            <div class="col-6 p-0 " >
+                                <img src="/imagens/f5a3188a-881f-4672-9eb7-bb5786c516d9.png">
+                            </div> 
+                    </div>
+                </div>
+            </div>
+
             <!--NOSSOS SERVIÇOS-->
             <h2 class="text-center">Serviços</h2>
             <div class="container mb-5">
