--- a/src/formularioServicos.html
+++ b/src/formularioServicos.html
@@ -94,12 +94,12 @@
 
                     <div class="input-box">
                         <label for="PFPJ">Pessoa Fisica</label>
-                        <input id="PFPJ" type="text" name="PFPJ" placeholder="Digite o seu CPF" required>
+                        <input id="PFPJ" type="text" data-js="cpf" name="PFPJ" placeholder="Digite o seu CPF" required>
                     </div>
 
                     <div class="input-box">
                         <label for="PFPJ">Pessoa Jurídica</label>
-                        <input id="PFPJ" type="text" name="PFPJ" placeholder="Digite o CNPJ da sua empresa" required>
+                        <input id="PFPJ" type="text" data-js="cnpj" name="PFPJ" placeholder="Digite o CNPJ da sua empresa" required>
                     </div>
 
                     <div class="input-box">
