--- a/src/trabalheconosco.html
+++ b/src/trabalheconosco.html
@@ -55,7 +55,12 @@
                                 <a class="nav-link" href="contato.html">Contato</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link me-5" href="cadastro.html">Cadastro</a>
+                                <a class="nav-link" href="cadastro.html">Cadastro</a>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li class="nav-item">
+                                <a class="nav-link" id="acessologin"  href="">Acessar</a>
                             </li>
                         </ul>
                     </div>
