add atributo data-js

--- a/src/formularioServicos.html
+++ b/src/formularioServicos.html
@@ -89,7 +89,7 @@
 
                     <div class="input-box">
                         <label for="">Celular</label>
-                        <input id="number" type="text" name="number" placeholder="(xx) xxxx-xxxx" required>
+                        <input id="number" type="text" data-js="phone" name="number" placeholder="(xx) xxxx-xxxx" required>
                     </div>
 
                     <div class="input-box">
