alterando js e add imagem a home

--- a/src/index.html
+++ b/src/index.html
@@ -172,7 +172,7 @@
                     </div>
                     <div id="gerenciadora">
                             <div class="col-6 p-0 " >
-                                <img src="/imagens/f5a3188a-881f-4672-9eb7-bb5786c516d9.png">
+                                <img src="img\f5a3188a-881f-4672-9eb7-bb5786c516d9.png">
                             </div> 
                     </div>
                 </div>
