--- a/src/trabalheconosco.html
+++ b/src/trabalheconosco.html
@@ -31,7 +31,7 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-                        <ul class="navbar-nav me-auto  mb-lg-0">
+                        <ul class="navbar-nav me-auto  mb-lg-0" id="teste123">
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="index.html">Home</a>
                             </li>
@@ -57,8 +57,6 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="cadastro.html">Cadastro</a>
                             </li>
-                        </ul>
-                        <ul>
                             <li class="nav-item">
                                 <a class="nav-link" id="acessologin"  href="">Acessar</a>
                             </li>
@@ -127,11 +125,13 @@
 
                     <body onload="generateCaptcha()">
                         <form onsubmit="return validateCaptcha()">
-                            <img id="captchaImage" src="" alt="CAPTCHA Image">
-                            <br>
-                            <input type="text" id="captchaInput" required>
-                            <input type="hidden" id="captchaText">
-                            <input type="submit" value="Enviar">
+                            <div id="captchaforms"> 
+                                <img id="captchaImage" src="" alt="CAPTCHA Image">
+                                <br>
+                                <input type="text" id="captchaInput" required>
+                                <input type="hidden" id="captchaText">
+                                <input type="submit" value="Enviar">
+                            </div>
                         </form>
                     </body>
                 </div>
