--- a/src/index.html
+++ b/src/index.html
@@ -364,7 +364,7 @@
             <p style="color: #ffffff;">© 2009-2023 Zucco</p>
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
