MUDANÇA NA PAG ONDE ESTAMOS E CSS

--- a/src/ondeestamos.html
+++ b/src/ondeestamos.html
@@ -64,52 +64,53 @@
 
     <main>
         <figure class="text-center mt-3">
+            
             <h1>Onde Estamos</h1>
             <!--TODAS AS PAGS-->
         </figure>
-
-        <div class="container-fluid mt-5">
-            <div class="row">
-                <div class="col-lg-10 col-md-10 col-sm-12 text-center">
-                    <h4>Contamos com estruturas em Flores da
-                        Cunha - RS e Contagem - MG, totalmente
-                        equipadas e prontas para atender as
-                        demandas.</h4>
-                    <h4>Possuímos infraestrutura pronta para efetuar coleta, fracionamento e entrega
-                        satisfatória e
-                        pontual. </h4>
-                    <h4>Contamos com equipamentos e ferramentas adequados para o transporte e
-                        armazenamento de
-                        mercadorias e cargas.</h4>
-                    <h4>Temos frota própria, com veículos 100% rastreados e segurados.</h4>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-4">
-                    <img src="img/MG.png" alt="Mapa Minas Gerais" width="150" height="150">
-                    <img src="img/RS.png" alt="Mapa Rio Grande do Sul" width="150" height="150">
+       
+            <div class="container-fluid mt-5">
+                <div class="row">
+                    <div class="col-lg-10 col-md-10 col-sm-12 text-center" id="centralizar">
+                        <p class="text-center">Contamos com estruturas em Flores da
+                            Cunha - RS e Contagem - MG, totalmente
+                            equipadas e prontas para atender as
+                            demandas.
+                            <br>
+                            Possuímos infraestrutura pronta para efetuar coleta, fracionamento e entrega
+                            satisfatória e
+                            pontual.<br>
+                            Contamos com equipamentos e ferramentas adequados para o transporte e
+                            armazenamento de
+                            mercadorias e cargas.<br>
+                            Temos frota própria, com veículos 100% rastreados e segurados.</p>
+                    </div>
+                    <div class="col-lg-2 col-md-2 col-sm-4">
+                        <img src="img/MG.png" alt="Mapa Minas Gerais" width="150" height="150">
+                        <img src="img/RS.png" alt="Mapa Rio Grande do Sul" width="150" height="150">
+                    </div>
                 </div>
             </div>
-        </div>
-
 
         <div class="container">
             <div class="col-6">
                 <h2 class="mt-3">Sede</h2>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-md-6 col-sm-6 ">
-                    <iframe class="ms-5 pe-5"
+                <div class="col-lg-4 col-md-6 col-sm-6 ">
+                    <iframe class=" pe-5"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3489.3543064734763!2d-51.20749352367462!3d-29.00649888392636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951e9bd5d5ef8def%3A0x1717cfdf2766038a!2sZucco%20Transportes!5e0!3m2!1spt-BR!2sbr!4v1684965149899!5m2!1spt-BR!2sbr"
                         width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
 
-                <div class="col-lg-3 col-md-6 col-sm-6 ms-5">
+                <div class="col-lg-3 col-md-6 col-sm-6 ">
                     <div class="card text-center">
                         <div class="card-body">
                             <h5>Endereço</h5>
-                            <h6>Estrada Gerardo Santin Guarese, S/N </h6>
-                            <h6>Flores da Cunha - RS - 95270-000</h6>
-                            <h6>(54) 99676-2776 - 99971-7006</h6>
+                            <p>Estrada Gerardo Santin Guarese, S/N </p>
+                            <p>Flores da Cunha - RS - 95270-000</p>
+                            <p>(54) 99676-2776 - 99971-7006</p>
                         </div>
                     </div>
                 </div>
@@ -122,19 +123,19 @@
                 <h2 class=" mt-3">Filial</h2>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-md-6 col-sm-6 ">
-                    <iframe class="ms-5 pe-5"
+                <div class="col-lg-4 col-md-6 col-sm-6 ">
+                    <iframe class=" pe-5"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3751.4981735149026!2d-44.056012223945594!3d-19.903401137482497!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa6957e3c54e713%3A0x6c07219685915e46!2sZucco%20Transportes%20Filial!5e0!3m2!1spt-BR!2sbr!4v1684965329052!5m2!1spt-BR!2sbr"
                         width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 ms-5">
+                <div class="col-lg-3 col-md-6 col-sm-6 ">
                     <div class="card text-center">
                         <div class="card-body">
                             <h5>Endereço</h5>
-                            <h6>R. Um, 555 - Do Comercio </h6>
-                            <h6>Contagem - MG - 32152-002</h6>
-                            <h6>(54) 99676-2776 - 99971-7006</h6>
+                            <p>R. Um, 555 - Do Comercio </p>
+                            <p>Contagem - MG - 32152-002</p>
+                            <p>(54) 99676-2776 - 99971-7006</p>
                         </div>
                     </div>
                 </div>
@@ -143,6 +144,7 @@
         </div>
 
     </main>
+
 
 
 
