adição tela mensagem final, mudança no css da tela e mudanã trabalhe conosco

--- a/src/trabalheconosco.html
+++ b/src/trabalheconosco.html
@@ -88,7 +88,7 @@
                     <button type="submit">Enviar</button>
         
                     <input type="hidden" name="accessKey" value="d3f8da60-caa1-4555-811a-9220237f0e73">
-                    <input type="hidden" name="redirectTo" value="http://127.0.0.1:5502/detalhes.html">
+                    <input type="hidden" name="redirectTo" value="http://127.0.0.1:5501/src/mensagem.html">
                 </form>
             </section>
         </div>
