alterações trab conosco e preder footer na parte de baixo

--- a/src/trabalheconosco.html
+++ b/src/trabalheconosco.html
@@ -75,7 +75,7 @@
     <main>
         <div id="main">
             <section id="formularioTrabConosco">
-                <h2>Contato</h2>
+                <h3>Informe seus dados</h3>
                 <form action="https://api.staticforms.xyz/submit" method="post">
                     <label>Nome</label>
                     <input type="text" name="name" placeholder="Digite seu nome" autocomplete="off" required>
