prendendo footer faq

--- a/src/faq.html
+++ b/src/faq.html
@@ -124,7 +124,7 @@
 
 
     <!--RODAPÉ-->
-    <footer>
+    <footer id="footercontato">
         <div class="container-fluid bg-light pt-3 pb-4 mt-3">
             <div class="row">
 
