--- a/src/cidadesatendidas.html
+++ b/src/cidadesatendidas.html
@@ -161,8 +161,8 @@
  <figure class="text-center mt-5">
         <h2>TEMPO DE ENTREGA</h2>
         </figure>
-<div class="center">
-  <div class="card" style="width: 75rem;">
+<div class="container">
+  <div class="card" style="width: 81rem;">
     <div class="card-body">
       <div class="card-body">
         <div class="container">
