--- a/src/pedidos.html
+++ b/src/pedidos.html
@@ -93,9 +93,15 @@
                 <thead>
                   <tr>
                     <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
+                    <th scope="col">Nome</th>
+                    <th scope="col">Nº do pedido</th>
+                    <th scope="col">E-mail</th>
+                    <th scope="col">Celular</th>
+                    <th scope="col">CPF</th>
+                    <th scope="col">CNPJ</th>
+                    <th scope="col">Cidade de Origem</th>
+                    <th scope="col">Cidade de Destino</th>
+                    <th scope="col">Tipo de serviço</th>
                   </tr>
                 </thead>
                 <tbody>
