finalizando a tela de planilhas

--- a/src/pedidos.html
+++ b/src/pedidos.html
@@ -84,7 +84,7 @@
     </header>
     <main>
         <figure class="text-center">
-            <h1 id="sobreZucco" class="mt-5">Perguntas Frequentes</h1>
+            <h1 id="sobreZucco" class="mt-5">Planilha de pedidos</h1>
             <!--TODAS AS PAGS-->
         </figure>
 
@@ -107,20 +107,15 @@
                 <tbody>
                   <tr>
                     <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td colspan="2">Larry the Bird</td>
-                    <td>@twitter</td>
+                    <td>Exemplo de nome</td>
+                    <td>000-1</td>
+                    <td>email.exemplo@nome.empresa.com</td>
+                    <td>(99) 99999-9999</td>
+                    <td>123.456.789-10</td>
+                    <td>12.345.678/0001-99</td>
+                    <td>Contagem-MG</td>
+                    <td>Flores da Cunha-RS</td>
+                    <td>Cotação</td>
                   </tr>
                 </tbody>
               </table>
