--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,7 @@
 
 </head>
 
-<body>
-
+<body onload="fazRequisicao('cotacao');">
     <!--CABEÇALHO-->
     <header>
         <nav class="navbar navbar-expand-xxl">
@@ -364,7 +363,7 @@
             <p style="color: #ffffff;">© 2009-2023 Zucco</p>
         </div>
     </footer>
-    <script src="./script.js"></script>
+    <script src="script/script.js"></script>
 </body>
 
 </html>
