--- a/src/cidadesatendidas.html
+++ b/src/cidadesatendidas.html
@@ -62,32 +62,13 @@
                                 <a class="nav-link" href="contato.html">Contato</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="cadastro.html">Cadastro</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#" id="openModal">Acessar</a>
+                                <a class="nav-link me-5" href="cadastro.html">Cadastro</a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </nav>
         </nav>
-        <div id="modal" class="modal">
-            <div class="modal-content">
-              <span class="close">&times;</span>
-              <h5 id="mensagemlogin">Acessar</h5>
-              <form>
-                <label for="login">E-mail:</label>
-                <input type="text" id="login">
-                <br>
-                <br>
-                <label for="senha">Senha:</label>
-                <input type="password" id="senha">
-                <br><br>
-                <input type="submit" value="Acessar">
-              </form>
-            </div>
-          </div>
     </header>
         <!--CONTEUDO-->
         <main>
@@ -177,27 +158,51 @@
               </div>
             </div>
           </div>
- <figure class="text-center mt-5">
-        <h2>TEMPO DE ENTREGA</h2>
-        </figure>
+<figure class="text-center mt-5">
+  <h2>TEMPO DE ENTREGA</h2>
+</figure>
 <div class="container">
-  <div class="card" style="width: 81rem;">
+  <div class="card">
     <div class="card-body">
-      <div class="card-body">
-        <div class="container">
-          <h5>Selecione o seu estado:</h5>
-          <div class="form-group">
-            <label for="estado"></label>
-            <select class="form-control" id="estado" onchange="atualizarTempoEntrega()">
-              <option value="SP">São Paulo</option>
-              <option value="SC">Santa Catarina</option>
-              <option value="MG">Minas Gerais</option>
-              <option value="PR">Paraná</option>
-            </select>
-          </div>
+      <div class="container">
+        <h5 class="text-center">Selecione o seu estado:</h5>
+        <div class="form-group">
+          <label for="estado"></label>
+          <select class="form-control" id="estado" onchange="atualizarTempoEntrega()">
+            <option value="SP">São Paulo</option>
+            <option value="SC">Santa Catarina</option>
+            <option value="MG">Minas Gerais</option>
+            <option value="PR">Paraná</option>
+          </select>
         </div>
       </div>
-      <div id="tempo-entrega"></div>
+    </div>
+    <div class="card-body">
+      <div id="tempo-entrega" class="text-center"></div>
+    </div>
+  </div>
+</div>
+<figure class="text-center mt-5">
+  <h2>VALOR DO FRETE</h2>
+</figure>
+<div class="container">
+  <div class="card">
+    <div class="card-body">
+      <div class="container">
+        <h5 class="text-center">Selecione o seu estado:</h5>
+        <div class="form-group">
+          <label for="estado"></label>
+          <select class="form-control" id="estado" onchange="valorFrete()">
+            <option value="SP">São Paulo</option>
+            <option value="SC">Santa Catarina</option>
+            <option value="MG">Minas Gerais</option>
+            <option value="PR">Paraná</option>
+          </select>
+        </div>
+      </div>
+    </div>
+    <div class="card-body">
+      <div id="tempo-entrega" class="text-center"></div>
     </div>
   </div>
 </div>
