mudança tela cadastro

--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -72,23 +72,28 @@
         <div id="main">
             <div class="container-fluid" id="conteudocadastro">
                 <div class="row">
-                    <div class="col-md-5" id="">
+                    <div class="col-md-4" id="">
 
                         <section id="formscadastro">
-                            <h3>Informe seus dados</h3>
                             <form method="post">
                                 <label id="identificacaoformulario">Nome</label>
-                                <input type="text" name="name" placeholder="Digite seu nome" autocomplete="off" required id="preencherformulario">
+                                <input type="text" placeholder="Digite seu nome" autocomplete="off" required id="preencherformulario">
                                 <label id="identificacaoformulario">Email</label>
-                                <input type="email" name="email" placeholder="Digite seu email" autocomplete="off" required id="preencherformulario">
+                                <input type="email" placeholder="Digite seu email" autocomplete="off" required id="preencherformulario">
                                 <label id="identificacaoformulario">Telefone</label>
-                                <input type="text" name="phone" placeholder="Digite seu telefone" autocomplete="off" required id="preencherformulario">
+                                <input type="text" placeholder="Digite seu telefone" autocomplete="off" required id="preencherformulario">
+                                <label id="identificacaoformulario">CPF</label>
+                                <input type="text" placeholder="Digite seu CPF" autocomplete="off" required id="preencherformulario">
+                                <label id="identificacaoformulario">Senha</label>
+                                <input type="text" placeholder="Digite seu CPF" autocomplete="off" required id="preencherformulario">
+                                <label id="identificacaoformulario">Confirmação de senha</label>
+                                <input type="text" placeholder="Digite seu CPF" autocomplete="off" required id="preencherformulario">
                                 <button id="btnformulario" type="submit">Enviar</button>
                             </form>
                         </section>
                 
                     </div>
-                    <div class="col-md-7" id="imagemCadastro">
+                    <div class="col-md-8" id="imagemCadastro">
                         <img src="img/imgcarrossel1.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
