--- a/src/trabalheconosco.html
+++ b/src/trabalheconosco.html
@@ -101,7 +101,7 @@
                     <input type="text" name="phone" placeholder="Digite seu telefone" autocomplete="off" required class="preencherformulario">
                     <label class="identificacaoformulario">Mensagem</label>
                     <textarea name="message" cols="10" rows="5" placeholder="Digite sua mensagem" required class="preencherformulario"></textarea>
-                    <button id="btnformulario" type="submit">Enviar</button>
+                    <button class="btnformulario" type="submit">Enviar</button>
 
                     <input type="hidden" name="accessKey" value="d3f8da60-caa1-4555-811a-9220237f0e73">
                     <input type="hidden" name="redirectTo" value="http://127.0.0.1:5501/src/mensagem.html">
