add script a pagina de form

--- a/src/formularioServicos.html
+++ b/src/formularioServicos.html
@@ -277,6 +277,6 @@
   </div>
 </div>
 </footer>
-<script src="validacoes.js"></script>
+<script src="/src/script/validacoes.js"></script>
 </body>
 </html>
