teste add mascara a pag de cadastro

--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -83,7 +83,7 @@
                     <input type="email" name="email" placeholder="Digite seu email" autocomplete="off" required
                         class="formscadastro" id="emailusuario">
                     <label class="identificacaoformulario">Telefone</label>
-                    <input type="text" name="phone" placeholder="Digite seu telefone" autocomplete="off" required
+                    <input type="text" name="phone" data-js="phone" placeholder="Digite seu telefone" autocomplete="off" required
                         class="formscadastro" id="telusuario">
                     <label class="identificacaoformulario" for="password">Senha</label>
                     <input type="password" name="password" placeholder="Digite sua senha" required class="formscadastro"
@@ -214,6 +214,7 @@
         </div>
     </footer>
     <script src="script.js"></script>
+    <script src="/src/script/validacoes.js"></script>
 </body>
 
 </html>
