add mascara pag trabalhe conosco

--- a/src/trabalheconosco.html
+++ b/src/trabalheconosco.html
@@ -98,7 +98,7 @@
                     <label class="identificacaoformulario">Email</label>
                     <input type="email" name="email" placeholder="Digite seu email" autocomplete="off" required class="preencherformulario">
                     <label class="identificacaoformulario">Telefone</label>
-                    <input type="text" name="phone" placeholder="Digite seu telefone" autocomplete="off" required class="preencherformulario">
+                    <input type="text" data-js="phone" name="phone" placeholder="Digite seu telefone" autocomplete="off" required class="preencherformulario">
                     <label class="identificacaoformulario">Mensagem</label>
                     <textarea name="message" cols="10" rows="5" placeholder="Digite sua mensagem" required class="preencherformulario"></textarea>
                     <button class="btnformulario" type="submit">Enviar</button>
@@ -228,5 +228,6 @@
         </div>
     </footer>
     <script src="script.js"></script>
+    <script src="/src/script/validacoes.js"></script>
 </body>
 </html>
