--- a/src/contato.html
+++ b/src/contato.html
@@ -95,8 +95,8 @@
               </div>
 
               <div class="form-floating mb-3">
-                <textarea class="form-control" data-js="phone" placeholder="Telefone" id="floatingTextarea2"></textarea>
-                <label for="floatingTextarea2">Telefone</label>
+                <textarea class="form-control"  placeholder="Telefone" id="floatingTextarea2"></textarea>
+                <label for="floatingTextarea2" data-js="phone" >Telefone</label>
               </div>
 
               <div class="form-floating">
